# TinyDB

./: BPlusTree.cpp  CMakeLists.txt  README.md  main.cpp  test.sh
Constraint/: Constraint.cpp  Constraint.h  NotNullConstraint.cpp  NotNullConstraint.h  PrimaryKeyConstraint.cpp  PrimaryKeyConstraint.h  UniqueConstraint.cpp  UniqueConstraint.h
Database/: DBMS.cpp  DBMS.h  Database.cpp  Database.h  Record.h  Table.cpp  Table.h
Expression/: ExpressionTerm.cpp  ExpressionTerm.h  SQLValue.cpp  SQLValue.h  SuffixExpression.cpp  SuffixExpression.h
FieldTypes/: BigIntFieldType.cpp  BigIntFieldType.h  CharacterFieldType.cpp  CharacterFieldType.h  FieldList.cpp  FieldList.h  FieldType.cpp  FieldType.h  FixedLengthIntegerFieldType.h  IntegerFieldType.cpp  IntegerFieldType.h  SmallIntFieldType.cpp  SmallIntFieldType.h
Index/: BPlusTree.cpp  BPlusTree.h  Index.cpp  Index.h  main.cpp
Parser/: ASTNodeBase.cpp  ASTNodeBase.h  ASTNodes.cpp  ASTNodes.h  SQLLexer.h  SQLLexer.lex  SQLParser.bison  SQLParser.cpp  SQLParser.h
Query/: SQLExecutor.cpp  SQLExecutor.h
Storage/: AbstractDynamicAllocator.cpp  AbstractDynamicAllocator.h  AbstractFixedAllocator.cpp  AbstractFixedAllocator.h  AbstractStorageArea.cpp  AbstractStorageArea.h  BlockAllocator.cpp  BlockAllocator.h  BuddyAllocator.cpp  BuddyAllocator.h  BuddyDynamicAllocator.cpp  BuddyDynamicAllocator.cpp.bak  BuddyDynamicAllocator.h  BuddyDynamicAllocator.h.bak  CachedStorageArea.cpp  CachedStorageArea.h  DiskStorageArea.cpp  DiskStorageArea.h  FixedAllocator.cpp  FixedAllocator.h  RecordAllocator.cpp  RecordAllocator.h  allocate.cpp
Tests/: bplustree_main.cpp
UnitTests/: bplustree_main.cpp  buddy_main.cpp
Utils/: Config.cpp  Config.h
tests/: test_00_basic_sqlite.sql  test_00_basic_tinydb.sql  test_01_single_table_level1_sqlite.sql  test_01_single_table_level1_tinydb.sql
